# clipturbo

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
agents/: README.md  orquestador-clipturbo.md  subagente-backend-python.md  subagente-bitacora-memoria.md  subagente-dominio-producto.md  subagente-guardarrailes-formato.md  subagente-observabilidad-calidad.md  subagente-orquestador-documentacion.md  subagente-pipeline-media.md  subagente-publicacion-compliance.md  subagente-revision-codigo.md  subagente-revision-procesos.md
copilot/: README.md  model-routing.md
docs/api/: openapi-base.md
docs/architecture/: arquitectura-orquestacion.md  contrato-pipeline.md  pipeline-media.md
docs/lession/: README.md
docs/lessons/: 2026-04-03-base-orquestacion.md  2026-04-03-bloqueo-fuga-metainstrucciones.md  2026-04-03-hf-gated-fallback.md  2026-04-03-routing-locale-registro.md  2026-04-03-service-hardening-review-fixes.md  README.md  pipeline-runs.md
docs/product/: compliance-spain-first.md  dominio-clipturbo.md  modelos-y-voces-espanol.md  publicacion-y-canales.md
docs/prompts/: compatibilidad-agentes.md  model-routing.md  prompt-claude-code.md  prompt-codex.md  prompt-github-copilot.md  prompt-maestro-ejecutivo.md  prompt-maestro.md
docs/runbooks/: runbook-desarrollo.md
manifests/: architecture-rules.md  clipturbo-context.md  command-whitelist.md  memory-policy.md  model-routing.json  token-policy.md
media/: README.md
media/demos/: README.md  stoic_motivacion.srt  (+2 more)
public/: README.md
tasks/: lessons.md  todo.md
(+28 files in other folders)
