[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipturbo"
version = "0.1.0"
description = "Base Python-first para la orquestacion y evolucion de ClipTurbo."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.8,<3.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.6,<1.0",
]

[tool.setuptools]
package-dir = {"" = "packages/clipturbo_core/src"}

[tool.setuptools.packages.find]
where = ["packages/clipturbo_core/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages/clipturbo_core/src", "apps/api-fastapi"]
addopts = ["--import-mode=importlib"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
mypy_path = ["packages/clipturbo_core/src", "apps/api-fastapi", "apps/worker-media"]
